--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1417,3 +1417,83 @@ figure.cover {
     color: #23212d !important;
   }
 }
+
+/* Add this to _base.scss */
+
+// Make images responsive within post content
+.post {
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .post-content {
+    img {
+      border-radius: 4px;
+      margin-bottom: 1rem;
+    }
+  }
+  
+  // For figures with captions
+  figure {
+    max-width: 100%;
+    
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    
+    figcaption {
+      font-size: 0.9rem;
+      text-align: center;
+      margin-top: 0.5rem;
+      color: var(--global-text-color-light);
+    }
+  }
+}
+
+// Make images responsive in markdown content generally
+.markdown {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+// Post list images
+.post-list {
+  li {
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
+
+// Adjust responsive behavior for medium zoom images
+.medium-zoom-image {
+  max-width: 100%;
+  height: auto !important;
+}
+
+// Fix for distill blog images
+d-article {
+  figure {
+    margin-bottom: 1.5rem;
+    
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
