--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,7 @@ $max-content-width: {{ site.max_width }};
   "custom",
   "distill",
   "cv",
+  "enhanced_styles",
   "tabs",
   "typograms",
   "font-awesome/fontawesome",
