--- a/_includes/repository/repo_trophies.liquid
+++ b/_includes/repository/repo_trophies.liquid
@@ -1,41 +1,35 @@
 <div class="repo p-2 text-center">
-  <a href="https://github.com/ryo-ma/github-profile-trophy">
-    <span class="d-none d-sm-none d-md-block">
+  <h3 style="margin-bottom: 15px; font-size: 1.3rem;">Mes trophées GitHub</h3>
+  <a href="https://github.com/{{ include.username }}">
+    <!-- Version Desktop -->
+    <span class="d-none d-md-block">
       <img
-        class="only-light"
+        class="only-light w-100"
         alt="{{ include.username }}"
-        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_light }}&locale={{ site.lang }}&margin-w=15&margin-h=15&no-bg=true&rank=-C&column=6"
+        style="max-width: 100%; height: auto; margin-bottom: 10px;"
+        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_light }}&locale={{ site.lang }}&margin-w=10&margin-h=8&no-frame=true&rank=SSS,SS,S,AAA,AA,A,B,C&column=4&row=2"
       >
       <img
-        class="only-dark"
+        class="only-dark w-100"
         alt="{{ include.username }}"
-        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_dark }}&locale={{ site.lang }}&margin-w=15&margin-h=15&no-bg=true&rank=-C&column=6"
-      >
-    </span>
-
-    <span class="d-none d-sm-block d-md-none">
-      <img
-        class="only-light"
-        alt="{{ include.username }}"
-        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_light }}&locale={{ site.lang }}&margin-w=15&margin-h=15&no-bg=true&rank=-C&column=4"
-      >
-      <img
-        class="only-dark"
-        alt="{{ include.username }}"
-        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_dark }}&locale={{ site.lang }}&margin-w=15&margin-h=15&no-bg=true&rank=-C&column=4"
+        style="max-width: 100%; height: auto; margin-bottom: 10px;"
+        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_dark }}&locale={{ site.lang }}&margin-w=10&margin-h=8&no-frame=true&rank=SSS,SS,S,AAA,AA,A,B,C&column=4&row=2"
       >
     </span>
 
-    <span class="d-block d-sm-none">
+    <!-- Version Mobile -->
+    <span class="d-block d-md-none">
       <img
-        class="only-light"
+        class="only-light w-100"
         alt="{{ include.username }}"
-        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_light }}&locale={{ site.lang }}&margin-w=15&margin-h=15&no-bg=true&rank=-C&column=3"
+        style="max-width: 100%; height: auto; margin-bottom: 10px;"
+        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_light }}&locale={{ site.lang }}&margin-w=8&margin-h=6&no-frame=true&rank=SSS,SS,S,AAA,AA,A,B,C&column=3&row=3"
       >
       <img
-        class="only-dark"
+        class="only-dark w-100"
         alt="{{ include.username }}"
-        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_dark }}&locale={{ site.lang }}&margin-w=15&margin-h=15&no-bg=true&rank=-C&column=3"
+        style="max-width: 100%; height: auto; margin-bottom: 10px;"
+        src="https://github-profile-trophy.vercel.app/?username={{ include.username }}&theme={{ site.repo_trophies.theme_dark }}&locale={{ site.lang }}&margin-w=8&margin-h=6&no-frame=true&rank=SSS,SS,S,AAA,AA,A,B,C&column=3&row=3"
       >
     </span>
   </a>
