--- a/_includes/repository/repo_user.liquid
+++ b/_includes/repository/repo_user.liquid
@@ -19,6 +19,7 @@
 {% endcase %}
 
 <div class="repo p-2 text-center">
+<!-- Carte des statistiques générales -->
   <a href="https://github.com/{{ include.username }}">
     <img
       class="only-light w-100"
@@ -30,5 +31,22 @@
       alt="{{ include.username }}"
       src="https://github-readme-stats.vercel.app/api/?username={{ include.username }}&theme={{ site.repo_theme_dark }}&locale={{ lang }}&show_icons=true"
     >
+  </a>
+</div>
+<div class="repo p-2 text-center">
+<!-- Carte des langages les plus utilisés -->
+  <a href="https://github.com/{{ include.username }}">
+          <img
+            class="only-light w-100"
+            alt="{{ include.username }} top languages"
+            style="border-radius: 8px;"
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ include.username }}&theme={{ site.repo_theme_light }}&locale={{ lang }}&layout=compact&count_private=true&cache_seconds=1800"
+          >
+          <img
+            class="only-dark w-100"
+            alt="{{ include.username }} top languages"
+            style="border-radius: 8px;"
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ include.username }}&theme={{ site.repo_theme_dark }}&locale={{ lang }}&layout=compact&count_private=true&cache_seconds=1800"
+          >
   </a>
 </div>
