--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,7 @@ $max-content-width: {{ site.max_width }};
   "distill",
   "cv",
   "enhanced_styles",
+  "custom_trophy",
   "tabs",
   "typograms",
   "font-awesome/fontawesome",
