Fix : fix attempts for true numbers of realized commits on github.

--- a/_includes/repository/repo_user.liquid
+++ b/_includes/repository/repo_user.liquid
@@ -40,13 +40,13 @@
             class="only-light w-100"
             alt="{{ include.username }} top languages"
             style="border-radius: 8px;"
-            src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ include.username }}&theme={{ site.repo_theme_light }}&locale={{ lang }}&layout=compact&count_private=true&cache_seconds=1800"
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ include.username }}&theme={{ site.repo_theme_light }}&locale={{ lang }}&layout=compact"
           >
           <img
             class="only-dark w-100"
             alt="{{ include.username }} top languages"
             style="border-radius: 8px;"
-            src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ include.username }}&theme={{ site.repo_theme_dark }}&locale={{ lang }}&layout=compact&count_private=true&cache_seconds=1800"
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ include.username }}&theme={{ site.repo_theme_dark }}&locale={{ lang }}&layout=compact"
           >
   </a>
 </div>
